Updated meo links

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                         <span class="banner-text-subheader">Imagine a Meower client...</span>
                     </div>
                     <div class="banner-launch">
-                        <a class="banner-jump" href="https://eris.pages.dev/meo/about" target="_blank">
-                            <span>Homepage</span>
-                            <img src="images/icons/jump.svg" width="20px" alt="icon">
+                        <a class="banner-jump" href="https://eris.pages.dev/meo/" target="_blank">
+                            <span>Launch</span>
+                            <img src="images/icons/rocket.svg" width="20px" alt="icon">
                         </a>
                     </div>
                 </div>
@@ -105,11 +105,11 @@
                     <div class="supports">
                         <span class="badge">Web</span>
                         <span class="badge">PWA</span>
-                        <span class="badge" style="display: none;">Windows</span>
+                        <span class="badge" style="display: none;">Electron</span>
                     </div>
-                    <a class="client-jump" href="https://eris.pages.dev/meo/about" target="_blank">
-                        <span>Homepage</span>
-                        <img src="images/icons/jump.svg" width="20px" alt="icon">
+                    <a class="client-jump" href="https://eris.pages.dev/meo/" target="_blank">
+                        <span>Launch</span>
+                        <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
                 <div class="client-sec" style="--border: #3a5073;">
