api-client link

--- a/discord/index.html
+++ b/discord/index.html
@@ -84,6 +84,7 @@
                     <a href="https://github.com/meower-media-co" target="_blank">Github</a>
                     <a href="https://status.meower.org/" target="_blank">Status</a>
                     <a href="https://github.com/MikeDev101/cloudlink" target="_blank">CloudLink</a>
+                    <a href="https://github.com/meower-media-co/api-client" target="_blank">api-client</a>
                 </div>
                 <div class="link-sec">
                     <span class="span-h3">App</span>
