--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="about-sec" style="--border: #765dee;">
-                <img src="../images/members/eris.png" alt="eri">
+                <img src="../images/members/eris.jpg" alt="eri">
                 <div class="about-inner">
                     <div class="title">
                         <span class="span-header">Eris</span>
