--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
+                <div class="client-sec" style="--border: #42bbb0">
+                    <span class="span-header">FurrChat</span>
+                    <span class="span-subheader">A client that captures the look and feel of the design style of the mid-2000s to early 2010s</span>
+                    <div class="supports">
+                        <span class="badge">Web</span>
+                    </div>
+                    <a class="client-jump" href="https://souplecodes.github.io/furrchat/" target="_blank">
+                        <span>Launch</span>
+                        <img src="images/icons/rocket.svg" width="20px" alt="icon">
+                    </a>
+                </div>
             </div>
             <span class="span-header">Dead Clients</span>
             <span class="span-p">Clients that are no longer maintained (likely non-functional)</span>
