--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
+                <div class="client-sec" style="--border: #000080">
+                    <span class="span-header">Meower95</span>
+                    <span class="span-subheader">Meower95 is </span>
+                    <div class="supports">
+                        <span class="badge">Python</span>
+                    </div>
+                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
+                        <span>Github</span>
+                        <img src="images/icons/github.svg" width="20px" alt="icon">
+                    </a>
+                </div>
                 <div class="client-sec" style="--border: #5a576e">
                     <span class="span-header">Meower Bare Bones</span>
                     <span class="span-subheader">A barebones meower client</span>
