--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
                     </div>
                 </div>
             </div>
+            <div class="banner" style="--image: url(images/banners/95_hd.png)">
+                    <div class="banner-image"></div>
+                    <div class="banner-text">
+                        <span class="banner-text-header">Meower95</span>
+                        <span class="banner-text-subheader">A hacky-wacky potato-compatible Meower client.</span>
+                    </div>
+                    <div class="banner-launch">
+                        <a class="banner-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
+                            <span>Github</span>
+                            <img src="images/icons/github.svg" width="20px" alt="icon">
+                        </a>
+                    </div>
+                </div>
             <div class="hero-header home">
                 <div class="header-logo">
                     <a href="">
@@ -136,7 +149,7 @@
                 </div>
                 <div class="client-sec" style="--border: #000080">
                     <span class="span-header">Meower95</span>
-                    <span class="span-subheader">Meower95 is </span>
+                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
                     <div class="supports">
                         <span class="badge">Python</span>
                     </div>
