Maybe: include meower95

--- a/index.html
+++ b/index.html
@@ -179,6 +179,17 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
+                <div class="client-sec" style="--border: #0099ff; display: none;">
+                    <span class="span-header">Meower95</span>
+                    <span class="span-subheader">Meower95 is the new lightweight, cute, Windows 95-styled and heckin' hackin' Meower client designed for low-end hardware.</span>
+                    <div class="supports">
+                        <span class="badge">Web</span>
+                    </div>
+                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
+                        <span>Launch</span>
+                        <img src="images/icons/rocket.svg" width="20px" alt="icon">
+                    </a>
+                </div>
             </div>
             <span class="span-header">Dead Clients</span>
             <span class="span-p">Clients that are no longer maintained (likely non-functional)</span>
