Some things relating to colour

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
-                <div class="client-sec" style="--border: #5a576e">
+                <div class="client-sec" style="--border: #5a576e;">
                     <span class="span-header">Meower Bare Bones</span>
                     <span class="span-subheader">A barebones meower client</span>
                     <div class="supports">
@@ -145,7 +145,7 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
-                <div class="client-sec" style="--border: #8bb775">
+                <div class="client-sec" style="--border: #8bb775;">
                     <span class="span-header">Leo</span>
                     <span class="span-subheader">A fork of meo</span>
                     <div class="supports">
@@ -157,7 +157,7 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
-                <div class="client-sec" style="--border: #0d6efd">
+                <div class="client-sec" style="--border: #0d6efd;">
                     <span class="span-header">Jeow</span>
                     <span class="span-subheader">Jeow is a Meower client made with Bootstrap and jQuery.</span>
                     <div class="supports">
@@ -168,7 +168,7 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
-                <div class="client-sec" style="--border: #42bbb0">
+                <div class="client-sec" style="--border: #42bbb0;">
                     <span class="span-header">FurrChat</span>
                     <span class="span-subheader">A client that captures the look and feel of the design style of the mid-2000s to early 2010s</span>
                     <div class="supports">
@@ -179,15 +179,15 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
-                <div class="client-sec" style="--border: #0099ff; display: none;">
+                <div class="client-sec" style="--border: #008080; display: none;">
                     <span class="span-header">Meower95</span>
-                    <span class="span-subheader">Meower95 is the new lightweight, cute, Windows 95-styled and heckin' hackin' Meower client designed for low-end hardware.</span>
+                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
                     <div class="supports">
-                        <span class="badge">Web</span>
+                        <span class="badge">Python</span>
                     </div>
                     <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
-                        <span>Launch</span>
-                        <img src="images/icons/rocket.svg" width="20px" alt="icon">
+                        <span>Github</span>
+                        <img src="images/icons/github.svg" width="20px" alt="icon">
                     </a>
                 </div>
             </div>
