--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <span class="span-header">Meower95</span>
                     <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
                     <div class="supports">
-                        <span class="badge">Python</span>
+                        <span class="badge">Windows</span>
                     </div>
                     <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
                         <span>Github</span>
