--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="client-sec" style="--border: #008080">
                     <span class="span-header">Meower95</span>
-                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
+                    <span class="span-subheader">The cutest potato-compatible Meower client.</span>
                     <div class="supports">
                         <span class="badge">Python</span>
                     </div>
@@ -202,6 +202,7 @@
                         <span>Launch</span>
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
+                </div>
             </div>
             <span class="span-header">Dead Clients</span>
             <span class="span-p">Clients that are no longer maintained (likely non-functional)</span>
