Back to how GOD INTENDED

--- a/index.html
+++ b/index.html
@@ -69,19 +69,6 @@
                     </div>
                 </div>
             </div>
-            <div class="banner" style="--image: url(images/banners/95_hd.png)">
-                    <div class="banner-image"></div>
-                    <div class="banner-text">
-                        <span class="banner-text-header">Meower95</span>
-                        <span class="banner-text-subheader">A hacky-wacky potato-compatible Meower client.</span>
-                    </div>
-                    <div class="banner-launch">
-                        <a class="banner-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
-                            <span>Github</span>
-                            <img src="images/icons/github.svg" width="20px" alt="icon">
-                        </a>
-                    </div>
-                </div>
             <div class="hero-header home">
                 <div class="header-logo">
                     <a href="">
@@ -147,17 +134,6 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
-                <div class="client-sec" style="--border: #008080">
-                    <span class="span-header">Meower95</span>
-                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
-                    <div class="supports">
-                        <span class="badge">Python</span>
-                    </div>
-                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
-                        <span>Github</span>
-                        <img src="images/icons/github.svg" width="20px" alt="icon">
-                    </a>
-                </div>
                 <div class="client-sec" style="--border: #5a576e;">
                     <span class="span-header">Meower Bare Bones</span>
                     <span class="span-subheader">A barebones meower client</span>
@@ -202,6 +178,18 @@
                         <span>Launch</span>
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
+                </div>
+                <div class="client-sec" style="--border: #008080;">
+                    <span class="span-header">Meower95</span>
+                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
+                    <div class="supports">
+                        <span class="badge">Windows</span>
+                    </div>
+                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
+                        <span>Github</span>
+                        <img src="images/icons/github.svg" width="20px" alt="icon">
+                    </a>
+                </div>
             </div>
             <span class="span-header">Dead Clients</span>
             <span class="span-p">Clients that are no longer maintained (likely non-functional)</span>
