--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
                         </a>
                     </div>
                 </div>
+                <div class="banner" style="--image: url(images/banners/95_hd.png)">
+                    <div class="banner-image"></div>
+                    <div class="banner-text">
+                        <span class="banner-text-header">Meower95</span>
+                        <span class="banner-text-subheader">A hacky-wacky potato-compatible Meower client.</span>
+                    </div>
+                    <div class="banner-launch">
+                        <a class="banner-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
+                            <span>Github</span>
+                            <img src="images/icons/github.svg" width="20px" alt="icon">
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="hero-header home">
                 <div class="header-logo">
