--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
                     <div class="supports">
                         <span class="badge">Windows</span>
+                        <span class="badge">Linux</span>
                     </div>
                     <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
                         <span>Github</span>
