--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="banner-text-subheader">A simple mobile-friendly Meower client. </span>
                     </div>
                     <div class="banner-launch">
-                        <a class="banner-jump" href="https://mybearworld.github.io/roarer/" target="_blank">
+                        <a class="banner-jump" href="https://mybearworld.github.io/roarer-2/" target="_blank">
                             <span>Launch</span>
                             <img src="images/icons/rocket.svg" width="20px" alt="icon">
                         </a>
@@ -127,11 +127,11 @@
                 </div>
                 <div class="client-sec" style="--border: #3a5073;">
                     <span class="span-header">Roarer</span>
-                    <span class="span-subheader">A simple mobile-friendly Meower client.</span>
+                    <span class="span-subheader">A simple mobile-friendly client for Meower made by mybearworld.</span>
                     <div class="supports">
                         <span class="badge">Web</span>
                     </div>
-                    <a class="client-jump" href="https://mybearworld.github.io/roarer/" target="_blank">
+                    <a class="client-jump" href="https://mybearworld.github.io/roarer-2/" target="_blank">
                         <span>Launch</span>
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
@@ -228,6 +228,17 @@
                     <a class="client-jump" href="https://github.com/meower-media-co/Meower-Archives/tree/main/clients/Meower-Vanilla" target="_blank">
                         <span>Github</span>
                         <img src="images/icons/github.svg" width="20px" alt="icon">
+                    </a>
+                </div>
+                <div class="client-sec" style="--border: #374151;">
+                    <span class="span-header">Roarer (Original)</span>
+                    <span class="span-subheader">This version of Roarer will not be maintained further.</span>
+                    <div class="supports">
+                        <span class="badge">Web</span>
+                    </div>
+                    <a class="client-jump" href="https://mybearworld.github.io/roarer-2/" target="_blank">
+                        <span>Launch</span>
+                        <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
             </div>
