Updated meo's description

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="clients">
                 <div class="client-sec" style="--border: #765dee;">
                     <span class="span-header">meo</span>
-                    <span class="span-subheader">The fastest, most mobile-friendly, and some other third thing client there is!</span>
+                    <span class="span-subheader">The fastest, most mobile-friendly, versatile client there is!</span>
                     <div class="supports">
                         <span class="badge">Web</span>
                         <span class="badge">PWA</span>
