--- a/index.html
+++ b/index.html
@@ -68,19 +68,6 @@
                         </a>
                     </div>
                 </div>
-                <div class="banner" style="--image: url(images/banners/95_hd.png)">
-                    <div class="banner-image"></div>
-                    <div class="banner-text">
-                        <span class="banner-text-header">Meower95</span>
-                        <span class="banner-text-subheader">A hacky-wacky potato-compatible Meower client.</span>
-                    </div>
-                    <div class="banner-launch">
-                        <a class="banner-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
-                            <span>Github</span>
-                            <img src="images/icons/github.svg" width="20px" alt="icon">
-                        </a>
-                    </div>
-                </div>
             </div>
             <div class="hero-header home">
                 <div class="header-logo">
@@ -114,7 +101,7 @@
             <div class="clients">
                 <div class="client-sec" style="--border: #765dee;">
                     <span class="span-header">meo</span>
-                    <span class="span-subheader">The fastest, most mobile-friendly, versatile client there is!</span>
+                    <span class="span-subheader">The fastest, most mobile-friendly, and versatile client there is!</span>
                     <div class="supports">
                         <span class="badge">Web</span>
                         <span class="badge">PWA</span>
@@ -192,18 +179,6 @@
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
                     </a>
                 </div>
-                <div class="client-sec" style="--border: #008080;">
-                    <span class="span-header">Meower95</span>
-                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
-                    <div class="supports">
-                        <span class="badge">Windows</span>
-                        <span class="badge">Linux</span>
-                    </div>
-                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
-                        <span>Github</span>
-                        <img src="images/icons/github.svg" width="20px" alt="icon">
-                    </a>
-                </div>
             </div>
             <span class="span-header">Dead Clients</span>
             <span class="span-p">Clients that are no longer maintained (likely non-functional)</span>
@@ -236,9 +211,21 @@
                     <div class="supports">
                         <span class="badge">Web</span>
                     </div>
-                    <a class="client-jump" href="https://mybearworld.github.io/roarer-2/" target="_blank">
+                    <a class="client-jump" href="https://mybearworld.github.io/roarer/" target="_blank">
                         <span>Launch</span>
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
+                    </a>
+                </div>
+                <div class="client-sec" style="--border: #008080;">
+                    <span class="span-header">Meower95</span>
+                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
+                    <div class="supports">
+                        <span class="badge">Windows</span>
+                        <span class="badge">Linux</span>
+                    </div>
+                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
+                        <span>Github</span>
+                        <img src="images/icons/github.svg" width="20px" alt="icon">
                     </a>
                 </div>
             </div>
