Fixed 404 home link

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         <div class="hero">
             <div class="hero-header">
                 <div class="header-logo">
-                    <a href="">
+                    <a href="../">
                         <img src="images/meowerlogo-white.svg" width="200px" alt="meower">
                         <span style="display: none;">Meower</span>
                     </a>
