Fixed 404 home link part ii

--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
         </div>
         <div class="footer">
             <div class="footer-logo">
-                <a href="">
+                <a href="../">
                     <img src="images/meowerlogo-white.svg" width="200px" alt="meower">
                     <span style="display: none;">Meower</span>
                 </a>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="link-sec">
                     <span class="span-h3">App</span>
-                    <a href="">Homepage</a>
+                    <a href="../">Homepage</a>
                     <a href="about">About</a>
                     <a href="legal">Legal</a>
                     <a href="export">Data Export</a>
