--- a/about/index.html
+++ b/about/index.html
@@ -60,21 +60,6 @@
                 </div>
             </div>
             <span class="span-subheader">Council Members</span>
-            <div class="about-sec" style="--border: #48b3ec;">
-                <img src="https://github.com/MikeDev101.png" alt="MikeDev's profile picture">
-                <div class="about-inner">
-                    <div class="title">
-                        <span class="span-header">MikeDEV</span>
-                        <div class="roles">
-                            <span class="badge">Legal</span>
-                            <span class="badge">Backend</span>
-                            <span class="badge">IT</span>
-                            <span class="badge">Mod</span>
-                        </div>
-                    </div>
-                    <p>The Ducklord. Chief Executive Officer and Backend Sysadmin.</p>
-                </div>
-            </div>
             <div class="about-sec" style="--border: #463c30;">
                 <img src="../images/members/tnix.png" alt="tni">
                 <div class="about-inner">
@@ -117,17 +102,19 @@
                     <p>Web Developer and supporter for Meower since late 2021!</p>
                 </div>
             </div>
-            <div class="about-sec" style="--border: #a8b4fc;">
-                <img src="https://github.com/qbjl.png" alt="silvxrcat's profile picture">
+            <div class="about-sec" style="--border: #ffd700;">
+                <img src="../images/members/ethernet.jpg" alt="ethernet's profile picture">
                 <div class="about-inner">
                     <div class="title">
-                        <span class="span-header">silvxrcat</span>
+                        <span class="span-header">Ethernet</span>
                         <div class="roles">
-                            <span class="badge">Frontend</span>
-                            <span class="badge">Mod</span>
+                            <span class="badge">IT</span>
+                            <span class="badge">Server Host</span>
                         </div>
                     </div>
-                    <p>Original Meower Founder. "boing".</p>
+                    <div>
+                        <p>no i am not wifi, do not associate me with that guy</p>
+                    </div>
                 </div>
             </div>
             <div class="about-sec" style="--border: #639bff;">
@@ -155,22 +142,6 @@
                     <p>Musician for Meower since 2020!</p>
                 </div>
             </div>
-            <span class="span-subheader">Server Hosts</span>
-            <div class="about-sec" style="--border: #ffd700;">
-                <img src="../images/members/ethernet.jpg" alt="ethernet's profile picture">
-                <div class="about-inner">
-                    <div class="title">
-                        <span class="span-header">Ethernet</span>
-                        <div class="roles">
-                            <span class="badge">IT</span>
-                        </div>
-                    </div>
-                    <div>
-                        <p>no i am not wifi, do not associate me with that guy</p>
-                        <span class="span-subsubheader">US West</span>
-                    </div>
-                </div>
-            </div>
             <div class="about-sec" style="--border: #48b3ec;">
                 <img src="https://github.com/MikeDev101.png" alt="MikeDev's profile picture">
                 <div class="about-inner">
@@ -183,10 +154,20 @@
                             <span class="badge">Mod</span>
                         </div>
                     </div>
-                    <div>
-                        <p>Aforementioned quote</p>
-                        <span class="span-subsubheader">US East</span>
+                    <p>The Ducklord. Chief Executive Officer and Backend Sysadmin.</p>
+                </div>
+            </div>
+            <div class="about-sec" style="--border: #a8b4fc;">
+                <img src="https://github.com/qbjl.png" alt="silvxrcat's profile picture">
+                <div class="about-inner">
+                    <div class="title">
+                        <span class="span-header">silvxrcat</span>
+                        <div class="roles">
+                            <span class="badge">Frontend</span>
+                            <span class="badge">Mod</span>
+                        </div>
                     </div>
+                    <p>Original Meower Founder. "boing".</p>
                 </div>
             </div>
             <span class="span-subheader">Team Members</span>
