meower95 bak in ze game

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
                     </div>
                 </div>
             </div>
+            <div class="banner" style="--image: url(images/banners/95_hd.png)">
+                    <div class="banner-image"></div>
+                    <div class="banner-text">
+                        <span class="banner-text-header">Meower95</span>
+                        <span class="banner-text-subheader">A hacky-wacky potato-compatible Meower client.</span>
+                    </div>
+                    <div class="banner-launch">
+                        <a class="client-jump" href="https://github.com/tehbarney86/meower95/" target="_blank">
+                            <span>Github</span>
+                            <img src="images/icons/github.svg" width="20px" alt="icon">
+                        </a>
+                    </div>
+                </div>
             <div class="hero-header home">
                 <div class="header-logo">
                     <a href="">
@@ -132,6 +145,17 @@
                     <a class="client-jump" href="https://app.meower.org/" target="_blank">
                         <span>Launch</span>
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
+                    </a>
+                </div>
+                <div class="client-sec" style="--border: #008080;">
+                    <span class="span-header">Meower95</span>
+                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
+                    <div class="supports">
+                        <span class="badge">Python</span>
+                    </div>
+                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
+                        <span>Github</span>
+                        <img src="images/icons/github.svg" width="20px" alt="icon">
                     </a>
                 </div>
                 <div class="client-sec" style="--border: #5a576e;">
@@ -214,18 +238,6 @@
                     <a class="client-jump" href="https://mybearworld.github.io/roarer/" target="_blank">
                         <span>Launch</span>
                         <img src="images/icons/rocket.svg" width="20px" alt="icon">
-                    </a>
-                </div>
-                <div class="client-sec" style="--border: #008080;">
-                    <span class="span-header">Meower95</span>
-                    <span class="span-subheader">A hacky-wacky potato-compatible Meower client.</span>
-                    <div class="supports">
-                        <span class="badge">Windows</span>
-                        <span class="badge">Linux</span>
-                    </div>
-                    <a class="client-jump" href="https://github.com/tehbarney86/meower95" target="_blank">
-                        <span>Github</span>
-                        <img src="images/icons/github.svg" width="20px" alt="icon">
                     </a>
                 </div>
             </div>
