Update index.html to fix links

--- a/export/index.html
+++ b/export/index.html
@@ -74,10 +74,10 @@
                 <div class="link-sec">
                     <span class="span-h3">Developers</span>
                     <a href="https://docs.meower.org/" target="_blank">Docs</a>
-                    <a href="https://github.com/meower-media-co" target="_blank">Github</a>
+                    <a href="https://github.com/meower-media" target="_blank">Github</a>
                     <a href="https://status.meower.org/" target="_blank">Status</a>
                     <a href="https://github.com/MikeDev101/cloudlink" target="_blank">CloudLink</a>
-                    <a href="https://github.com/meower-media-co/api-client" target="_blank">api-client</a>
+                    <a href="https://github.com/meower-media/api-client" target="_blank">api-client</a>
                 </div>
                 <div class="link-sec">
                     <span class="span-h3">App</span>
