Fix all the links
The last commit missed a lot of them
I also replaced the youtube link for how to install Vivaldi to an official link.

--- a/unsupported/index.html
+++ b/unsupported/index.html
@@ -55,7 +55,7 @@
             <a href="https://www.google.com/chrome/">
                 <img src="../images/browsers/chrome.png" width="128px" style="margin-left:10px;margin-right:10px;">
             </a>
-            <a href="https://www.youtube.com/watch?v=Cz4aTSnFVvk">
+            <a href="https://vivaldi.com/">
                 <img src="../images/browsers/vivaldi.png" width="128px" style="margin-left:10px;margin-right:10px;">
             </a>
         </div>
