--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a class="header-link" href="https://app.meower.org"><img src="images/icons/rocket.svg" width="20px" alt="icon"><span>Launch</span></a>
                     <a class="header-link" href="about"><img src="images/icons/help-circle.svg" width="20px" alt="icon"><span>About</span></a>
                     <a class="header-link" href="legal"><img src="images/icons/scale.svg" width="20px" alt="icon"><span>Legal</span></a>
-                    <a class="header-link" href="https://github.com/meower-media-co" target="_blank"><img src="images/icons/github.svg" width="20px" alt="icon"><span>Github</span></a>
+                    <a class="header-link" href="https://github.com/meower-media" target="_blank"><img src="images/icons/github.svg" width="20px" alt="icon"><span>Github</span></a>
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
                     <div class="supports">
                         <span class="badge">🪦</span>
                     </div>
-                    <a class="client-jump" href="https://github.com/meower-media-co/Meower-Archives/tree/main/clients/Meower-Vanilla" target="_blank">
+                    <a class="client-jump" href="https://github.com/meower-media/Meower-Archives/tree/main/clients/Meower-Vanilla" target="_blank">
                         <span>Github</span>
                         <img src="images/icons/github.svg" width="20px" alt="icon">
                     </a>
@@ -242,10 +242,10 @@
                 <div class="link-sec">
                     <span class="span-h3">Developers</span>
                     <a href="https://docs.meower.org/" target="_blank">Docs</a>
-                    <a href="https://github.com/meower-media-co" target="_blank">Github</a>
+                    <a href="https://github.com/meower-media" target="_blank">Github</a>
                     <a href="https://status.meower.org/" target="_blank">Status</a>
                     <a href="https://github.com/MikeDev101/cloudlink" target="_blank">CloudLink</a>
-                    <a href="https://github.com/meower-media-co/api-client" target="_blank">api-client</a>
+                    <a href="https://github.com/meower-media/api-client" target="_blank">api-client</a>
                 </div>
                 <div class="link-sec">
                     <span class="span-h3">App</span>
